Hide h1 with new web-only utility class, NOT wrapped in a div this time, but using CSS to ensure tabs are in correct grid-row

--- a/src/index.css
+++ b/src/index.css
@@ -146,6 +146,7 @@ button {
 }
 
 .tabs {
+  grid-row: 2;
   padding-block: .5rem;
   padding-inline: 8px;
   display: flex;
